--- a/styles/global.css
+++ b/styles/global.css
@@ -63,8 +63,9 @@
 }
 
 .search-content {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  justify-content: center;
   gap: 30px 10px;
 }
 
