--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -15,7 +15,7 @@
   }
 
   .search-content {
-    flex-wrap: wrap;
+    grid-template-columns: repeat(auto-fill, 320px);
     gap: 50px 40px;
   }
 
